<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_baseline_playlist_add_check_24"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_baseline_storage_24"
            android:title="@string/menu_storage" />
        <item
            android:id="@+id/nav_swap"
            android:icon="@drawable/ic_baseline_swap_horiz_24"
            android:title="@string/menu_swap" />
    </group>
</menu>