<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug_login"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_developer_mode_24"
        android:title="@string/debug_login"
        app:showAsAction="never" />
</menu>