<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/capturePokemonFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pokeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pokeapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pokeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.pokeapp.ui.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.pokeapp.ui.SettingsFragment"
        android:label="@string/setting" />
    <action android:id="@+id/action_global_settingsFragment" app:destination="@id/settingsFragment" />
    <fragment
        android:id="@+id/nav_team"
        android:name="com.example.pokeapp.ui.team.TeamFragment"
        android:label="@string/menu_team"
        tools:layout="@layout/fragment_team_list" />
    <fragment
        android:id="@+id/captureFullscreenFragment"
        android:name="com.example.pokeapp.ui.capture.CaptureFullscreenFragment"
        android:label="fragment_capture_fullscreen"
        tools:layout="@layout/fragment_capture_fullscreen" />
    <action android:id="@+id/action_global_captureFullscreenFragment" app:destination="@id/captureFullscreenFragment" />
    <fragment
        android:id="@+id/capturePokemonFragment"
        android:name="com.example.pokeapp.ui.capture.CapturePokemonFragment"
        android:label="fragment_capture_pokemon_list"
        tools:layout="@layout/fragment_capture_pokemon_list" />
    <action android:id="@+id/action_global_capturePokemonFragment" app:destination="@id/capturePokemonFragment" />
</navigation>