<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_baseline_offline_bolt_24"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/primaryLightColor"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/name" />
<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginLeft="4dp"-->
<!--        android:layout_marginRight="4dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:fontFamily="sans-serif"-->
<!--        android:hint="@string/temporary_title"/>-->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/is_party_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:checked="false"
        android:text="@string/is_party_member" />
</LinearLayout>